test/message/esm_display_syntax_error.out
file:///*/test/message/esm_display_syntax_error.mjs:3
await async () => 0;
^^^^^
SyntaxError: Unexpected reserved word
    at ModuleLoader._loadModule (internal/modules/esm/module_loader.js:*:*)
