test/message/esm_display_syntax_error.mjs
// Flags: --module
'use strict';
await async () => 0;
